--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -19,7 +19,7 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
-          
+          <th scope="col">Edit URL</th>
           <th scope="col">Delete</th>
         </tr>
       </thead>
@@ -27,10 +27,16 @@
         <% for(let url in urls) { %>
           <tr>
             <td><%= url %></td>
+
             <td><%= urls[url] %></td>
-            
+
+            <td><form method="GET" action="/urls/<%= url %>">
+              <input type="submit" value="Edit">
+            </form></td>
+
             <td><form method="POST" action="/urls/<%= url %>/delete">
               <input type="submit" value="Delete">
+              
             </form></td>
                                        
           </tr>
