--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,18 +10,11 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
-    <% if (user) { %>
-      <form class="form-inline" action="/logout" method="POST" style="padding-top: 0px">
-        <%= user.email %>
-        <button type="submit" class="btn btn-outline-dark" style="margin-left: 1em">Logout</button>
-      </form>
-      <% } else { %>
-      <form class="form-inline" action="/login" method="GET">
-        <button type="submit" class="btn btn-outline-light" style="margin-right: 2em;">Login</button>
-      </form>
-      <form class="form-inline" action="/register" method="GET">
-        <button type="submit" class="btn btn-outline-light">Register</button>
-      </form>
-      <% } %>
+
+    <!---Login-logout form-->
+    <form class="form-inline" action="/urls" method="POST">
+      <input class="form-control" type="text" name="username" placeholder="Username" style="width: 200px; margin: 1em">
+      <button type="submit" class="btn btn-primary">Sign in</button>
+    </form>
   </nav>
 </header>
