--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -12,9 +12,16 @@
     </div>
 
     <!---Login-logout form-->
-    <form class="form-inline" action="/urls" method="POST">
+    <% if (username) { %>
+      <form class="form-inline" action="/logout" method="POST">
+        <p>Logged in as <%= username %></p>
+        <button type="submit" class="btn btn-primary">Logout</button>
+      </form>
+      <% } else { %>
+    <form class="form-inline" action="/login" method="POST">
       <input class="form-control" type="text" name="username" placeholder="Username" style="width: 200px; margin: 1em">
       <button type="submit" class="btn btn-primary">Sign in</button>
     </form>
+    <% } %>
   </nav>
 </header>
