added the registration page

--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -20,7 +20,8 @@
         <div class="form-group mb-2">
           <label for="email">Email:</label>
           <input class="form-control" type="email" name="email" placeholder="youremail@example.ca" style="width: 300px; margin: 1em">
-          <label for="password">Password:></label>
+          <label for="password">Password:</label>
+          <input class="form-control" type="password" name="password" placeholder="enter password here" style="width: 300px; margin: 1em">
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
       </form>
