--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -28,7 +28,7 @@
           <tr>
             <td><%= url %></td>
 
-            <td><%= urls[url] %></td>
+            <td><%= urls[url]["longURL"] %></td>
 
             <td><form method="GET" action="/urls/<%= url %>">
               <input type="submit" value="Edit">
